# datahold

./: MANIFEST.in  Makefile  README.rst  pyproject.toml
docs/: CNAME  features.html  impressum.html  index.html  index1.html  install.html  license.html  testing.html  v1.1.rst  v1.2.rst  v2.0.rst  v2.1.rst  v2.2.rst  v2.3.rst  v3.0.rst  v3.1.rst  v4.0.dev.rst  v4.0.rst
make/: run_introspection.py  run_mypy.py  toml_sorted_pyproject.txt  toml_sorted_testdata.txt
src/datahold/: __init__.py  _utils.py  core.py
src/datahold/_utils/: Cfg.py  Missing.py  Slice.py  __init__.py  cfg.toml  wrapping.py
src/datahold/base/: BaseDataAbstractSet.py  BaseDataCollection.py  BaseDataContainer.py  BaseDataDict.py  BaseDataFgettable.py  BaseDataIterable.py  BaseDataList.py  BaseDataMapping.py  BaseDataObject.py  BaseDataReversible.py  BaseDataSequence.py  BaseDataSet.py  BaseDataSized.py  BaseHoldCollection.py  BaseHoldDict.py  BaseHoldList.py  BaseHoldObject.py  BaseHoldSet.py  __init__.py
src/datahold/core/: BaseDataDict.py  (+56 more)
tests/: test_BaseDataAbstractSet.py  test_BaseDataMapping.py  test_BaseDataSequence.py  test_Data_.py  test_FrozenHoldDict.py  test_FrozenHoldList.py  test_FrozenHoldSet.py  test_HoldDict.py  test_HoldList.py  test_HoldSet.py  test_SlotDict.py  test_data.py  test_datahold_TestAbstractness.py  test_datahold_TestCopy.py  test_datahold_TestDataAttribute.py  test_datahold_TestFrozenMutability.py  test_datahold_TestInheritance.py  test_datahold_TestMutableBehavior.py  test_datahold_TestProtocols.py  test_generic.py  test_object.py  test_testdata.py  testdata.toml
(+62 files in other folders)
