[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=77.0",
]

[project]
authors = [
    { email = "johannes.programming@gmail.com", name = "Johannes" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
dependencies = [
    "cmp3>=1.1,<2",
    "copyable>=1.1,<2",
    "frozendict>=2.4.6,<3",
    "iterprod>=1.1,<2",
    "setdoc>=1.3.22,<2",
]
description = "This project wraps common mutable datastructures for inheritance with modification."
keywords = []
license = "MIT"
license-files = [
    "LICENSE.txt",
]
name = "datahold"
readme = "README.rst"
requires-python = ">=3.12"
version = "4.0.0.dev4"

[project.urls]
Download = "https://pypi.org/project/datahold/#files"
Index = "https://pypi.org/project/datahold/"
Source = "https://github.com/johannes-programming/datahold/"
Website = "http://datahold.johannes-programming.online/"

[tool.mypy]
files = [
    ".",
]
python_version = "3.11"
strict = true
